# 2026-CCISC

./: README.md  pyproject.toml  requirements-core.txt  requirements-lock.txt  run_demo.cmd  verify.cmd
config/: consistency_specs.yaml  nli_config.json
data/: adversarial_benchmark_v1.jsonl  annotation_seed.jsonl  attack_scenarios.json  converted_security_demo.jsonl  converted_security_traces.jsonl  deepseek_batch_cases.json  deepseek_extended_case_schema.json  evaluation_traces.jsonl  hard_normal_cases.json  office_task_suite.json  realistic_attack_cases.json  redteam_attack_catalog.json  sample_traces.jsonl  stage3_consistency_benchmark.jsonl
demo/: agent.css  agent.html  agent.js  app.js  index.html  styles.css
scripts/: analyze_deepseek_by_surface.py  analyze_deepseek_false_positives.py  analyze_deepseek_residual_risks.py  audit_deepseek_candidate_pool_consistency.py  build_deepseek_medium_plan.py  build_deepseek_real300_plan.py  build_deepseek_v6_fixture.py  build_deepseek_v7_fixture.py  build_demo_causal_graph.py  build_demo_evidence_viewer.py  build_stage21_case_level_reports.py  build_stage23_pilot_gate_decision.py  build_stage24_fix_compare.py  build_stage24_pilot_issue_reports.py  build_technical_report.py  check_environment.py  compare_deepseek_real_small_medium.py  convert_security_logs.py  demo_server.py  download_nli_model.py  evaluate.py  generate_deepseek_candidate_pool.py  prepare_annotation_packet.py  recover_deepseek_batch_from_trace.py  repair_traces.py  run_ablation.py  run_api.py  run_deepseek_batch_experiment.py  run_experiment.py  (+13 more)
(+72 files in other folders)
